--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "element-ui": "^1.1.6",
     "vue": "^2.1.10",
+    "vue-axios": "^1.2.2",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
