--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^0.15.3",
     "element-ui": "^1.1.6",
+    "fastclick": "^1.0.6",
     "vue": "^2.1.10",
     "vue-axios": "^1.2.2",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vuex": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
